--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sor87",
-  "version": "3.17.3",
+  "name": "smartroute87",
+  "version": "1.0.0",
   "description": "Uniswap Smart Order Router",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
