--- a/package.json
+++ b/package.json
@@ -33,26 +33,26 @@
   "dependencies": {
     "@uniswap/default-token-list": "^11.2.0",
     "@uniswap/permit2-sdk": "^1.2.0",
-    "router87": "1.0.0",
     "@uniswap/swap-router-contracts": "^1.3.0",
     "@uniswap/token-lists": "^1.0.0-beta.31",
     "@uniswap/universal-router": "^1.0.1",
-    "universal87": "1.0.0",
-    "v287": "1.0.0",
-    "v387": "1.0.0",
-    "core87": "1.0.0",
     "async-retry": "^1.3.1",
     "await-timeout": "^1.1.1",
     "axios": "^0.21.1",
     "bunyan": "^1.8.15",
     "bunyan-blackhole": "^1.1.1",
+    "core87": "1.0.0",
     "ethers": "^5.7.2",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
     "lodash": "^4.17.21",
     "mnemonist": "^0.38.3",
     "node-cache": "^5.1.2",
-    "stats-lite": "^2.2.0"
+    "router87": "1.0.0",
+    "stats-lite": "^2.2.0",
+    "universal87": "1.0.0",
+    "v287": "1.0.0",
+    "v387": "1.0.0"
   },
   "devDependencies": {
     "@ethersproject/providers": "^5.4.0",
@@ -68,7 +68,7 @@
     "@types/jest": "^27.0.0",
     "@types/jest-sinon": "^1.0.2",
     "@types/lodash": "^4.14.168",
-    "@types/node": "^15.0.2",
+    "@types/node": "^16.0.0",
     "@types/sinon": "^10.0.2",
     "@types/stats-lite": "^2.2.0",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
